FEAT: SubCategory API Docs
